# Physics535_Project

./: .gitignore  Makefile  README.md  pyproject.toml
src/cli/: isco_cli.py  make_figs.py
src/physics/: isco.py  shadow.py
src/physics_535_isco_shadow.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/viz/: gifs.py  plots.py
tests/: test_isco.py  test_shadow.py
