[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "physics-535-isco-shadow"
version = "0.1.0"
description = "Tools for ISCO and Kerr shadow analysis"
authors = [{ name = "Physics 535 Project" }]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
    "pytest>=7.4",
    "imageio>=2.31",
    "scipy>=1.10"
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

